--- a/СтарыйСофт-для-Windows-XPVista.css
+++ b/СтарыйСофт-для-Windows-XPVista.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1841px;
+  min-height: 1944px;
 }
 
 .u-section-1 .u-text-1 {
@@ -23,61 +23,59 @@
   margin: 8px auto 0;
 }
 
+.u-section-1 .u-btn-2 {
+  margin: 8px auto 0;
+}
+
 .u-section-1 .u-text-3 {
   font-weight: 700;
-  margin: 100px auto 0 311px;
+  margin: 110px 661px 0 311px;
 }
 
 .u-section-1 .u-text-4 {
-  font-weight: 700;
+  font-weight: normal;
   margin: -39px auto 0 649px;
-}
-
-.u-section-1 .u-btn-2 {
-  background-image: none;
-  margin: 8px auto 0 596px;
-  padding: 10px 105px 10px 104px;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
-  margin: -45px auto 0 245px;
+  margin: 8px auto 0 245px;
   padding: 10px 80px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
-  margin: 8px auto 0 245px;
-  padding: 10px 54px;
+  margin: -45px 243px 0 auto;
+  padding: 10px 99px 10px 97px;
 }
 
 .u-section-1 .u-btn-5 {
   background-image: none;
-  margin: -45px 245px 0 auto;
-  padding: 10px 99px 10px 97px;
+  margin: 8px auto 0 245px;
+  padding: 10px 54px;
 }
 
 .u-section-1 .u-btn-6 {
   background-image: none;
-  margin: 8px auto 0 596px;
+  margin: -45px auto 0 598px;
   padding: 10px 95px;
 }
 
 .u-section-1 .u-btn-7 {
   background-image: none;
-  margin: -45px auto 0 245px;
+  margin: 8px auto 0 245px;
   padding: 10px 115px;
 }
 
 .u-section-1 .u-btn-8 {
   background-image: none;
-  margin: 8px auto 0 596px;
+  margin: -45px auto 0 598px;
   padding: 10px 94px 10px 93px;
 }
 
 .u-section-1 .u-text-5 {
   font-weight: 700;
-  margin: 51px auto 0 327px;
+  margin: 104px auto 0 327px;
 }
 
 .u-section-1 .u-text-6 {
@@ -139,8 +137,8 @@
 
 .u-section-1 .u-btn-16 {
   background-image: none;
-  margin: -45px 246px 0 auto;
-  padding: 10px 75px 10px 74px;
+  margin: -45px 245px 0 auto;
+  padding: 10px 87px 10px 86px;
 }
 
 .u-section-1 .u-btn-17 {
@@ -151,35 +149,35 @@
 
 .u-section-1 .u-btn-18 {
   background-image: none;
-  margin: -45px 245px 0 auto;
-  padding: 10px 87px 10px 86px;
+  margin: -45px 246px 0 auto;
+  padding: 10px 42px 10px 40px;
 }
 
 .u-section-1 .u-btn-19 {
   background-image: none;
-  margin: 8px 246px 0 auto;
-  padding: 10px 42px 10px 40px;
-}
-
-.u-section-1 .u-btn-20 {
-  background-image: none;
-  margin: -45px auto 0 245px;
+  margin: 8px auto 0 245px;
   padding: 10px 100px 10px 98px;
 }
 
 .u-section-1 .u-image-1 {
   width: 1016px;
   height: 571px;
-  margin: 50px auto 51px;
+  margin: 50px auto 40px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2004px;
+    min-height: 2003px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: 7px;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
+    margin-top: 111px;
+    margin-right: 561px;
     margin-left: 207px;
   }
 
@@ -189,21 +187,17 @@
     margin-left: auto;
   }
 
-  .u-section-1 .u-btn-2 {
-    margin-left: 480px;
-  }
-
   .u-section-1 .u-btn-3 {
     margin-left: 129px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: 129px;
+    margin-right: 43px;
+    margin-left: 480px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-right: 45px;
-    margin-left: 480px;
+    margin-left: 129px;
   }
 
   .u-section-1 .u-btn-6 {
@@ -284,11 +278,6 @@
   }
 
   .u-section-1 .u-btn-19 {
-    margin-right: auto;
-    margin-left: 480px;
-  }
-
-  .u-section-1 .u-btn-20 {
     margin-left: 129px;
   }
 
@@ -296,27 +285,30 @@
     width: 940px;
     height: 528px;
     margin-top: 192px;
-    margin-bottom: 60px;
+    margin-bottom: 0;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1782px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 101px;
-    margin-left: 109px;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-right: auto;
-    margin-left: 431px;
+    min-height: 1724px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 378px;
+    margin-top: 19px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 42px;
+    margin-right: 446px;
+    margin-left: 103px;
+  }
+
+  .u-section-1 .u-text-4 {
+    font-weight: 700;
+    margin-top: -5px;
+    margin-right: auto;
+    margin-left: 431px;
   }
 
   .u-section-1 .u-btn-3 {
@@ -324,12 +316,12 @@
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: 43px;
+    margin-right: auto;
+    margin-left: 378px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-right: auto;
-    margin-left: 378px;
+    margin-left: 43px;
   }
 
   .u-section-1 .u-btn-6 {
@@ -396,8 +388,7 @@
   }
 
   .u-section-1 .u-btn-16 {
-    margin-right: 44px;
-    margin-left: auto;
+    margin-left: 377px;
   }
 
   .u-section-1 .u-btn-17 {
@@ -405,22 +396,17 @@
   }
 
   .u-section-1 .u-btn-18 {
-    margin-left: 377px;
-  }
-
-  .u-section-1 .u-btn-19 {
     margin-right: 44px;
     margin-left: 377px;
   }
 
-  .u-section-1 .u-btn-20 {
+  .u-section-1 .u-btn-19 {
     margin-left: 44px;
   }
 
   .u-section-1 .u-image-1 {
     height: 404px;
     margin-top: 51px;
-    margin-bottom: 43px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -429,7 +415,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2699px;
+    min-height: 1335px;
   }
 
   .u-section-1 .u-text-1 {
@@ -442,7 +428,13 @@
     margin-right: 0;
   }
 
+  .u-section-1 .u-btn-2 {
+    margin-top: 911px;
+  }
+
   .u-section-1 .u-text-3 {
+    margin-top: -855px;
+    margin-right: 356px;
     margin-left: auto;
   }
 
@@ -451,25 +443,23 @@
     margin-left: auto;
   }
 
-  .u-section-1 .u-btn-2 {
-    margin-left: auto;
-  }
-
   .u-section-1 .u-btn-3 {
-    margin-top: -313px;
+    margin-top: -260px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-4 {
+    margin-top: 276px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 223px;
+    margin-top: -313px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-6 {
+    margin-top: 276px;
     margin-left: auto;
   }
 
@@ -536,33 +526,28 @@
   }
 
   .u-section-1 .u-btn-16 {
-    margin-top: 223px;
-    margin-right: auto;
+    margin-top: 276px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-17 {
-    margin-top: -260px;
+    margin-top: -313px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-18 {
-    margin-top: 223px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-btn-19 {
+    margin-top: 276px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .u-section-1 .u-btn-20 {
+  .u-section-1 .u-btn-19 {
     margin-top: -313px;
     margin-left: auto;
   }
 
   .u-section-1 .u-image-1 {
     margin-top: 348px;
-    margin-bottom: 44px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -571,11 +556,16 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2596px;
+    min-height: 1223px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: 981px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 80px;
+    margin-top: -946px;
+    margin-right: 172px;
   }
 
   .u-section-1 .u-text-4 {
@@ -583,11 +573,19 @@
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: -305px;
+    margin-top: -252px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-top: 268px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 215px;
+    margin-top: -305px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-top: 268px;
   }
 
   .u-section-1 .u-btn-7 {
@@ -631,27 +629,45 @@
   }
 
   .u-section-1 .u-btn-16 {
-    margin-top: 215px;
+    margin-top: 268px;
   }
 
   .u-section-1 .u-btn-17 {
-    margin-top: -252px;
+    margin-top: -305px;
   }
 
   .u-section-1 .u-btn-18 {
-    margin-top: 215px;
+    margin-top: 268px;
   }
 
-  .u-section-1 .u-btn-20 {
+  .u-section-1 .u-btn-19 {
     margin-top: -305px;
   }
 
   .u-section-1 .u-image-1 {
     margin-top: 357px;
-    margin-bottom: 60px;
     object-position: 0% 50%;
     width: auto;
     margin-right: initial;
     margin-left: initial;
+  }
+} .u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 50vw;
+}
+
+.u-section-2 .u-text-1 {
+  font-size: 1.5rem;
+  width: auto;
+  margin: 63px 10px 60px;
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
